# cclottaaworld

./: .gitignore  architecture.md  package.json
_legacy/: index.html
_legacy/src/: main.js
_legacy/src/engine/: creatureRenderer.js  inventory.js  pet.js  pixelIcons.js  save.js  state.js  voxelCreatures.js  voxelEngine.js  voxelTown.js
_legacy/src/screens/: apartment.js  petView.js  select.js  shopArcade.js  shopCafe.js  shopFashion.js  shopFortune.js  shopGarden.js  shopPark.js  shopSupply.js  shopVinyl.js  shopWork.js  title.js  town.js
_legacy/src/styles/: index.css
client/: index.html  package.json  vite.config.js
client/src/: main.js
client/src/data/: characterConfig.js
client/src/engine/: assetLoader.js  blockRegistry.js  characterDraw.js  characterModel.js  chunkRenderer.js  controls.js  devTools.js  renderer.js  sceneManager.js  screenBase.js  screenRegistry.js  shopRegistry.js
client/src/screens/: apartment.js  petView.js  select.js  shopArcade.js  shopCafe.js  shopFashion.js  shopFortune.js  shopGarden.js  shopPark.js  shopVinyl.js  shopWork.js  title.js  town.js
client/src/state/: gameState.js  inventory.js  saveManager.js
client/src/styles/: browser.css  chrome.css  components.css  creatures.css  index.css  retro.css  shops.css  tokens.css
client/src/ui/: browserChrome.js  pixelIcons.js
server/: .env.example  package.json
server/src/: index.js
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
wasm-engine/src/meshing/: greedy.rs
wasm-engine/src/utils/: noise.rs
wasm-engine/src/world/: block.rs  chunk.rs  generator.rs  mod.rs
(+9 files in other folders)
