[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2021"
description = "ccllottaaWorld Voxel Engine — Rust → WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
noise = "0.9"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"       # Optimize for small .wasm size
lto = true
